Making heap directory valgrind safe. README file is updated with latest experience.

--- a/src/README
+++ b/src/README
@@ -79,3 +79,9 @@ Initialize the pointer to NULL.
 
 ==============
 
+Valgrind error symptom : memcpy : Source and destination addresses are overlapping.
+
+Check and fix them accordingly.
+
+==============
+
